ztParser 1.4.0 and update docs

--- a/docs/assets/css/documentation.css
+++ b/docs/assets/css/documentation.css
@@ -206,7 +206,7 @@ div.pages div div.page:not(.actualPage) {
 .object_icon {
     margin: auto;
     margin-left: 10px;
-    display: none;
+    display: flex;
 }
 
 .object:hover .object_icon {
